--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
 <body>
 <div id="header-placeholder"></div>
 <div class="container mx-auto px-4 md:px-10 lg:px-20">
-
         <div id="hero-placeholder"></div>
-
         <div id="news-placeholder"></div>
-
+        <div id="ongoing-placeholder"></div>
+        <div id=timeline-placeholder></div>
+        <div id="activity-placeholder"></div>
+        <div id="proker-placeholder"></div>
+        <div id="emagz-placeholder"></div>
+        <div id="podcast-placeholder"></div>
 </div>
 <div id="footer-placeholder"></div>
 </body>
 <script src="js/loader.js"></script>
-<script src="js/script.js"></script>
-<script src="js/emagz.js"></script>
 <html>
