--- a/sections/hero.html
+++ b/sections/hero.html
@@ -1,12 +1,12 @@
-<!-- 1. Hero Section -->
-<main id="main" class="">
-  <section id="home" class="fade-in justify-center">
-    <div>
-      <h1 class="heading1 nav-text-white-left">Himpunan Mahasiswa Teknik Elektro Unsoed</h1>
-      <p class="news-paragraph text-white">Website resmi Himpunan Mahasiswa Teknik Elektro Universitas Jenderal Soedirman</p>
-      <a href="kepengurusan.html" class="news-paragraph text-green-500 hover:text-green-400 transition duration-300">Tentang kami</a>
+<!-- Hero Section -->
+<section id="home" class="fade-in">
+  <div>
+    <h1 class="heading1 gradient-text">Himpunan Mahasiswa Teknik Elektro Unsoed</h1>
+    <p class="paragraph home-text-white">Website resmi Himpunan Mahasiswa Teknik Elektro Universitas Jenderal Soedirman</p>
+    <a href="kepengurusan.html" class="text-green hover:text-green-400 transition duration-300 inline-flex items-center gap-2">
+      Tentang kami
       <i class="ri-arrow-right-line"></i>
-    </div>
-    <img src="img/logohmte.webp" alt="Logo Kabinet" />
-  </section>
-</main>
+    </a>
+  </div>
+  <img src="img/logohmte.webp" alt="Logo HMTE Unsoed" />
+</section>
