--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     function gtag() { dataLayer.push(arguments); }
     gtag("js", new Date());
     gtag("config", "G-GWPL5RWLH5");
+
+    
   </script>
+  
 
   <style></style>
 
@@ -85,4 +88,5 @@
 <script src="js/loader.js"></script>
 <script src="js/data/news.js"></script>
 <script src="js/data/news-generator.js"></script>
+<script src="js/data/calendar.js"></script>
 <html>
