--- a/sections/news.html
+++ b/sections/news.html
@@ -5,7 +5,7 @@
     <div id="latest-news-container" class="flex flex-wrap gap-8 justify-center"></div>
 
     <div class="mt-10 text-center">
-      <a href="news.html" class="px-6 py-2 bg-white text-black font-medium rounded-lg hover:bg-gray-200 transition">Lihat berita lainnya</a>
+      <a href="../page/news/news.html" class="px-6 py-2 bg-white text-black font-medium rounded-lg hover:bg-gray-200 transition">Lihat berita lainnya</a>
     </div>
   </div>
 </section>
@@ -71,8 +71,7 @@
                     </div>
 
                     <div class="mt-4 flex flex-col flex-1 p-4">
-                        <p class="text-xs font-semibold text-cyan-400 mb-1">${formatDate(news.date)} • ${news.category}</p>
-                        <h3 class="font-bold text-white text-lg mb-2">${news.title}</h3>
+<p class="text-xs font-semibold text-cyan-400 mb-1">${formatDate(news.date)} • ${news.category}</p>                        <h3 class="font-bold text-white text-lg mb-2">${news.title}</h3>
                         <p class="text-gray-300 text-sm leading-relaxed">${news.preview}</p>
                     </div>
                 </div>
