--- a/index.html
+++ b/index.html
@@ -89,4 +89,6 @@
 <script src="js/data/news.js"></script>
 <script src="js/data/news-generator.js"></script>
 <script src="js/data/calendar.js"></script>
+<script src="js/data/project.js"></script>
+<script src="js/pages/home.js"></script>
 <html>
