--- a/sections/ongoing.html
+++ b/sections/ongoing.html
@@ -1,48 +1,11 @@
-<!-- ACARA On-going -->
-<section class="py-16 fade-in">
-  <div class="mx-auto px-6">
-    <h2 class="text-2xl font-bold text-center text-white mb-8">Acara On-going</h2>
+<section class="py-16 bg-gray-900">
+  <div class="max-w-6xl mx-auto px-6">
+    <h2 class="text-2xl font-bold text-center text-white mb-12">Kegiatan Mendatang</h2>
 
-    <!-- Grid wrapper dengan center alignment -->
-    <div class="flex justify-center items-center">
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 w-full" style="max-width: 900px">
-        <!-- Card 1 -->
-        <div class="flex flex-col rounded-xl overflow-hidden border border-emerald-500 transition-all duration-500 hover:border-green-500 hover:shadow-lg hover:shadow-green-500/40 cursor-pointer bg-transparent w-full">
-          <!-- Poster -->
-          <div class="flex items-center justify-center bg-black" style="width: 100%; aspect-ratio: 9/12; overflow: hidden">
-            <img src="img/49d9b1a0-ca5b-4e48-99fd-b3b1d1a6c305.jpeg" alt="Workshop Elektrikal" style="width: 100%; height: 100%; object-fit: cover" class="transition-transform duration-500 hover:scale-105" />
-          </div>
+    <div id="home-ongoing-container" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
 
-          <!-- Info -->
-          <div class="p-4 flex flex-col flex-1 bg-gray-900">
-            <h3 class="text-md font-bold text-white mb-1">Workshop Elektrikal</h3>
-            <p class="text-gray-300 text-xs mb-3">28 Sep 2025 • 09:00 - 12:00 WIB • Aula Teknik Elektro</p>
-            <button class="mt-auto px-3 py-1 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition text-sm">Daftar Sekarang</button>
-          </div>
-        </div>
-
-        <!-- Card 2 (Opsional - hapus jika hanya 1 event) -->
-        <!-- 
-        <div class="flex flex-col rounded-xl overflow-hidden border border-emerald-500 transition-all duration-500 hover:border-green-500 hover:shadow-lg hover:shadow-green-500/40 cursor-pointer bg-transparent w-full">
-          <div class="flex items-center justify-center bg-black" style="width: 100%; aspect-ratio: 9/12; overflow: hidden">
-            <img 
-              src="img/event2.jpg" 
-              alt="Seminar Nasional" 
-              style="width: 100%; height: 100%; object-fit: cover" 
-              class="transition-transform duration-500 hover:scale-105" 
-            />
-          </div>
-
-          <div class="p-4 flex flex-col flex-1 bg-gray-900">
-            <h3 class="text-md font-bold text-white mb-1">Seminar Nasional</h3>
-            <p class="text-gray-300 text-xs mb-3">30 Sep 2025 • 13:00 - 16:00 WIB • Gedung Convention</p>
-            <button class="mt-auto px-3 py-1 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition text-sm">
-              Daftar Sekarang
-            </button>
-          </div>
-        </div>
-        -->
-      </div>
+    <div class="mt-10 text-center">
+      <a href="./page/event/event.html" class="inline-block px-6 py-2 bg-white text-black font-medium rounded-lg hover:bg-gray-200 transition"> Lihat Semua Kegiatan → </a>
     </div>
   </div>
 </section>
