叶えてよよよよ

--- a/sections/podcast.html
+++ b/sections/podcast.html
@@ -6,7 +6,7 @@
         Podcast
         <span class="absolute -bottom-3 left-1/2 transform -translate-x-1/2 w-20 h-1.5 bg-green-500 rounded-full"></span>
       </h2>
-      <p class="text-gray-400 mt-4 text-sm md:text-base">Jadwal kegiatan dan program kerja terdekat.</p>
+      <p class="text-gray-400 mt-4 text-sm md:text-base">POTEK (Podcast Teknik Elektro).</p>
     </div>
     <div class="flex flex-wrap justify-center gap-6">
       <!-- Card Podcast 1 -->
