--- a/sections/proker.html
+++ b/sections/proker.html
@@ -5,7 +5,7 @@
         Program Kerja
         <span class="absolute -bottom-3 left-1/2 transform -translate-x-1/2 w-20 h-1.5 bg-green-500 rounded-full"></span>
       </h2>
-      <p class="text-gray-400 mt-4 text-sm md:text-base">Jadwal kegiatan dan program kerja terdekat.</p>
+      <p class="text-gray-400 mt-4 text-sm md:text-base">Ragam proyek dan kegiatan yang sedang, akan, dan telah kami laksanakan.</p>
     </div>
     <div id="home-proker-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6"></div>
 
