--- a/sections/ongoing.html
+++ b/sections/ongoing.html
@@ -8,10 +8,10 @@
   <div class="max-w-6xl mx-auto px-6">
     <div class="text-center mb-8">
       <h2 class="text-3xl md:text-4xl font-extrabold text-white relative inline-block">
-        Agenda HMTE
+        Acara On-going
         <span class="absolute -bottom-3 left-1/2 transform -translate-x-1/2 w-20 h-1.5 bg-green-500 rounded-full"></span>
       </h2>
-      <p class="text-gray-400 mt-4 text-sm md:text-base">Jadwal kegiatan dan program kerja terdekat.</p>
+      <p class="text-gray-400 mt-4 text-sm md:text-base">Event dan Acara HMTE terdekat.</p>
     </div>
 
     <div id="home-ongoing-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-center"></div>
