叶えてよよよよ

--- a/sections/emagz.html
+++ b/sections/emagz.html
@@ -5,7 +5,7 @@
         Elektro Magazine
         <span class="absolute -bottom-3 left-1/2 transform -translate-x-1/2 w-20 h-1.5 bg-green-500 rounded-full"></span>
       </h2>
-      <p class="text-gray-400 mt-4 text-sm md:text-base">Jadwal kegiatan dan program kerja terdekat.</p>
+      <p class="text-gray-400 mt-4 text-sm md:text-base">Arus informasi himpunan dan kreativitas mahasiswa.</p>
     </div>
     <div id="emagz-cards-container" class="flex flex-wrap justify-center gap-10">
       <p class="text-gray-400">Memuat edisi Emagz...</p>
