Update Proker Kepengurusan

--- a/kepengurusan.html
+++ b/kepengurusan.html
@@ -624,16 +624,24 @@
       ],
       proker: [
         {
-          title: "External Relations",
-          desc: "Menjalin kerjasama dengan organisasi eksternal dan instansi terkait."
+          title: "Electrical For Society",
+          desc: "Electrical For Society merupakan program kerja yang mewujudkan implementasi poin ketiga Tri Dharma Perguruan Tinggi. Oleh karena itu, program ini diharapkan menunjukkan kepedulian tinggi terhadap lingkungan sekitarnya. Kegiatan ini hadir untuk memberikan kontribusi nyata dan solusi yang berdampak langsung untuk kesejahteraan sosial masyarakat sekitar."
         },
         {
-          title: "Public Relations Campaign",
-          desc: "Merancang dan melaksanakan kampanye untuk meningkatkan citra HMTE."
+          title: "Kunjungan Himpunan",
+          desc: "Kunjungan Himpunan Mahasiswa merupakan program kerja yang melibatkan seluruh anggota pengurus HMTE. Kegiatan ini bertujuan untuk mempererat tali silaturahmi, berbagi pengalaman, serta bertukar wawasan dengan himpunan mahasiswa lainnya, baik di dalam lingkungan Unsoed maupun di luar Unsoed."
         },
         {
-          title: "Networking Event",
-          desc: "Menyelenggarakan acara networking dengan alumni dan profesional."
+          title: "Kunjungan Industri",
+          desc: "Kunjungan Industri merupakan program kerja HMTE Unsoed untuk mengunjungi sebuah perusahaan dengan tujuan mempelajari proses produksi, teknologi, manajemen, dan praktik terkait metode yang digunakan. Salah satu sarana untuk bisa memperkenalkan mahasiswa terhadap dunia industri adalah dengan cara mengadakan pengamatan dan perkenalan langsung ke lokasi industri."
+        },
+        {
+          title: "FKHMEI",
+          desc: "Merupakan program kerja yang dirancang untuk membangun sinergi antara HMTE dengan jejaring mahasiswa Teknik Elektro se-Indonesia, khususnya di wilayah Jawa Tengah. Program ini berfungsi sebagai wadah komunikasi aktif untuk mempererat silaturahmi antar-universitas sekaligus menjadi forum diskusi solutif dalam merespons isu-isu strategis yang dihadapi anggota FKHMEI bersama HMTE."
+        },
+        {
+          title: "Sponsorship",
+          desc: "Program kerja Sponsorship diharapkan dapat menjadi sarana yang efektif bagi Himpunan Mahasiswa Teknik Elektro Unsoed Kabinet Parama Astra periode 2025 dalam memperluas relasi dan menjalin kerja sama yang saling menguntungkan. Dalam kerja sama ini, pihak eksternal dapat berkontribusi dalam penyediaan dana, sumber daya, serta berbagai bentuk dukungan lainnya."
         }
       ]
     },
@@ -652,20 +660,8 @@
       ],
       proker: [
         {
-          title: "Seminar Entrepreneurship",
-          desc: "Mengadakan seminar dan workshop tentang kewirausahaan dan bisnis."
-        },
-        {
-          title: "Business Incubator",
-          desc: "Memberikan pendampingan untuk mahasiswa yang ingin memulai bisnis."
-        },
-        {
-          title: "Expo Produk Mahasiswa",
-          desc: "Menyelenggarakan pameran produk dan jasa hasil karya mahasiswa."
-        },
-        {
-          title: "Expo Produk Mahasiswa 2",
-          desc: "Menyelenggarakan pameran produk dan jasa hasil karya mahasiswa."
+          title: "Coming Soon",
+          desc: "In Progress . . . ."
         }
       ]
     },
@@ -688,16 +684,36 @@
       ],
       proker: [
         {
-          title: "Kompetisi Robotika",
-          desc: "Menyelenggarakan kompetisi robotika tingkat nasional untuk mahasiswa."
+          title: "Studymate",
+          desc: "Di dalam perkuliahan tentunya banyak persoalan akademik yang harus dilewati, salah satunya adalah sulitnya memahami beberapa mata kuliah dalam bidang Teknik Elektro. Maka dari itu, kami dari HMTE UNSOED mengadakan program kerja studymate sebagai kegiatan mentoring atau diskusi bersama yang berfungsi untuk meningkatan pemahaman mahasiswa terhadap mata kuliah yang dianggap sulit."
         },
         {
-          title: "Workshop IoT",
-          desc: "Mengadakan pelatihan Internet of Things dan teknologi terkini."
+          title: "Kuliah Umum",
+          desc: "Merupakan kegiatan akademik yang berfungsi sebagai wadah penyampaian suatu topik atau pengetahuan kepada mahasiswa yang disampaikan oleh akademisi yang handal dan kompeten di bidangnya. Kegiatan ini diharapkan dapat menjadi lahan ide, motivasi dan wawasan untuk para peserta dalam menentukan arah minat dan bakat yang relevan dengan industri yang sedang trend."
         },
         {
-          title: "Research Grant",
-          desc: "Memberikan bantuan pendanaan untuk penelitian mahasiswa berprestasi."
+          title: "Komunitas KRONIKA",
+          desc: "KRONIKA (Mikrokontroler, Elektronika, dan Robotika) merupakan salah satu komunitas strategis di Teknik Elektro Unsoed yang mewadahi minat teknis mahasiswa. Komunitas ini hadir untuk menjembatani kesenjangan antara teori akademik dan keterampilan praktis, sekaligus menjadi ruang kolaborasi bagi anggotanya, serta menambah wawasan mereka tentang dunia robotic."
+        },
+        {
+          title: "Komunitas OSC",
+          desc: "OSC (Open Source Community). Open Source Community adalah komunitas yang berfungsi sebagai sarana pada pengembangan keterampilan dan kolaborasi di dunia teknologi open source. Komunitas ini ditujukan khusus untuk mahasiswa Teknik Elektro Unsoed yang berminat pada pengembangan dan pemanfaatan teknologi berbasis open source."
+        },
+        {
+          title: "Komunitas  PLC",
+          desc: "Komunitas PLC (Programmable Logic Controller) hadir sebagai pusat pengembangan hard skill mahasiswa Teknik Elektro Unsoed di bidang otomasi industri. Melalui pendalaman teknologi Programmable Logic Controller, komunitas ini menjembatani teori kendali dengan praktik lapangan, bertujuan mencetak mahasiswa yang inovatif dan siap terjun ke dunia industri modern."
+        },
+        {
+          title: "PKM Center",
+          desc: "PKM Center berfungsi sebagai wadah fasilitasi mahasiswa Teknik Elektro dalam menghadapi ajang PKM DIKTI. Melalui sosialisasi terarah dan lomba proposal, program ini bertujuan meningkatkan kuantitas dan kualitas partisipasi mahasiswa, memastikan ide-ide inovatif tersalurkan sesuai standar penulisan ilmiah yang berlaku."
+        },
+        {
+          title: "PILMAPRES",
+          desc: "PILMAPRES hadir sebagai respons strategis HMTE Unsoed dalam menjaring talenta unggul yang siap mensinergikan kecerdasan intelektual dengan kontribusi nyata bagi masyarakat, ajang ini menjadi wadah untuk menyeleksi mahasiswa yang tidak hanya berprestasi, namun juga solutif terhadap tantangan pembangunan dan teknologi masa depan."
+        },
+        {
+          title: "Database",
+          desc: "Database merupakan sebuah program kerja yang digunakan sebagai wadah bagi Keluarga Besar Teknik Elektro untuk menyimpan data – data penting seperti data alumni, materi mata kuliah, penyimpanan judul Tugas Akhir (TA), dan pendataan tempat Kerja Praktik (KP)."
         }
       ]
     },
@@ -717,16 +733,24 @@
       ],
       proker: [
         {
-          title: "Content Creator Workshop",
-          desc: "Pelatihan pembuatan konten digital untuk media sosial HMTE."
+          title: "Electro’s Present",
+          desc: "Electro’s Present merupakan program kerja pengelolaan media sosial HMTE yang mencakup distribusi informasi, publikasi kegiatan HMTE dan media partner, serta beberapa konten hiburan. Media sosial yang berada di bawah tanggung jawab Electro’s Present antara lain Instagram, Twitter, TikTok dan LinkedIn."
         },
         {
-          title: "Dokumentasi Kegiatan",
-          desc: "Mendokumentasikan seluruh kegiatan HMTE dalam bentuk foto dan video."
+          title: "Electropedia",
+          desc: "Electropedia secara Bahasa artinya pengetahuan Teknik Elektro. Pengetahuan disini memiliki artian yang luas, dimana  akan ada berbagi informasi seputar teknologi dan teknik elektro menggunakan sarana media sosial HMTE Unsoed. Dalam beberapa kesempatan HMTE juga mengadakan kuis berhadiah yang dapat diikuti oleh seluruh KBTE angkatan aktif."
         },
         {
-          title: "Podcast HMTE",
-          desc: "Memproduksi podcast berkala tentang teknologi dan kehidupan mahasiswa."
+          title: "E-Magz",
+          desc: "E-Magz merupakan sarana informasi yang dirancang untuk memperkuat identitas Teknik Elektro Unsoed. Sebagai media publikasi resmi, program ini menjembatani kebutuhan mahasiswa akan informasi kegiatan himpunan dan wawasan teknologi terbaru, memastikan seluruh civitas akademika tetap terhubung, terinformasi, dan relevan dengan dinamika perkembangan zaman."
+        },
+        {
+          title: "POTEK",
+          desc: "POTEK (Podcast Teknik Elektro) merupakan program kerja berupa konten obrolan santai dengan narasumber terkait, yang membahas topik tertentu sebagai media informasi, aspirasi, inspirasi, serta hiburan bagi anggota KBTE, mahasiswa maupun masyarakat umum."
+        },
+        {
+          title: "Web Content",
+          desc: "Web Content merupakan website untuk mendigitalisasi informasi di lingkungan Teknik Elektro Unsoed. Melalui pengelolaan situs yang profesional, program ini memuat etalase program kerja HMTE dan wawasan jurusan, memastikan setiap informasi tersimpan rapi sebagai arsip digital yang dapat diakses kapan saja dan di mana saja."
         }
       ]
     },
@@ -745,16 +769,12 @@
       ],
       proker: [
         {
-          title: "Turnamen E-Sports",
-          desc: "Menyelenggarakan kompetisi game online dan offline untuk mahasiswa."
+          title: "E-Sport",
+          desc: "Program kerja ini bertujuan untuk mempererat tali persaudaraan dan kekeluargaan di kalangan mahasiswa Teknik Elektro dengan menghadirkan KBTE dalam kegiatan bermakna. Melalui kegiatan ini, diharapkan terjalin silaturahmi, meningkatnya solidaritas, tersalurkannya bakat, tumbuhnya semangat kompetitif, serta terwujudnya sikap sportivitas yang tinggi. Meningkatkan partisipasi mahasiswa teknik elektro dalam kompetisi diluar lingkungan teknik elektro."
         },
         {
-          title: "Art & Music Festival",
-          desc: "Festival seni dan musik untuk menampilkan talenta mahasiswa elektro."
-        },
-        {
-          title: "Sport Competition",
-          desc: "Kompetisi olahraga antar angkatan dan fakultas."
+          title: "Coming Soon",
+          desc: "In progress. . . ."
         }
       ]
     },
@@ -773,16 +793,20 @@
       ],
       proker: [
         {
-          title: "Leadership Training",
-          desc: "Program pelatihan kepemimpinan untuk kader HMTE masa depan."
+          title: "Electrical Days",
+          desc: "Electrical Days adalah sebuah wadah dari HMTE Unsoed bagi mahasiswa baru untuk mensosialisasikan lingkungan perkuliahan yang baik dan mengenalkan civitas akademika. Mengenal lingkungan perkuliahan berarti mengenal dunia Teknik Elektro, serta menjalin tali silaturahmi kebersamaan mahasiswa dan dosen, khususnya di Teknik Elektro UNSOED."
         },
         {
-          title: "Soft Skills Workshop",
-          desc: "Workshop pengembangan kemampuan komunikasi dan interpersonal."
+          title: "Pelatihan dan Bootcamp",
+          desc: "Pesatnya laju perkembangan teknologi menuntut mahasiswa Teknik Elektro untuk senantiasa adaptif demi pengembangan kualitas diri. Oleh karena itu, diperlukan program kerja pelatihan dan bootcamp yang terintegrasi mencakup hard skill dan soft skill sebagai sarana vital untuk menguasai dinamika teknologi tersebut."
         },
         {
-          title: "Mentoring Program",
-          desc: "Program mentoring antara senior dan junior untuk transfer knowledge."
+          title: "Sosialisasi",
+          desc: "Sosialisasi adalah proses pembelajaran yang dilakukan untuk mengenali lingkungan. Pada periode HMTE tahun ini, terdapat 4 sosialisasi yang akan dilakukan antara lain Sosialisasi Konsentrasi, Sosialisasi KP, Sosialisasi TA, dan Sosialisasi MBKM."
+        },
+        {
+          title: "DEFORCOM",
+          desc: "DEFORCOM (Delegation for Competition) adalah program kerja yang bertujuan untuk memfasilitasi setiap Mahasiswa Teknik Elektro UNSOED yang ingin mengikuti kompetisi atau pelatihan baik pada bidang akademik maupun non akademik, di dalam maupun di luar lingkup Jurusan Teknik Elektro. sehingga harapannya mahasiswa dapat mengembangkan diri, melatih skill, dan meraih prestasi."
         }
       ]
     },
@@ -804,16 +828,8 @@
       ],
       proker: [
         {
-          title: "Manajemen Aset",
-          desc: "Mengelola inventaris dan aset organisasi dengan sistem yang terorganisir."
-        },
-        {
-          title: "Event Management",
-          desc: "Mengkoordinasikan logistik dan teknis pelaksanaan seluruh kegiatan HMTE."
-        },
-        {
-          title: "Administrative Support",
-          desc: "Memberikan dukungan administratif untuk seluruh divisi dan kegiatan."
+          title: "Coming Soon",
+          desc: "In Progress . . . ."
         }
       ]
     }
