--- a/sections/podcast.html
+++ b/sections/podcast.html
@@ -11,14 +11,14 @@
     <div class="flex flex-wrap justify-center gap-6">
       <!-- Card Podcast 1 -->
       <a
-        href="https://www.youtube.com/watch?v=Ofzory4hRsg"
+        href="https://youtu.be/tcTy54pZHEQ?si=XZ1LepsGFDN3WqjA"
         target="_blank"
         class="relative w-[320px] md:w-[360px] h-[200px] md:h-[220px] rounded-lg overflow-hidden shadow-lg group cursor-pointer border-2 border-transparent hover:border-green-800 hover:shadow-[0_0_15px_rgba(34,197,94,0.6)] bg-black flex items-center justify-center"
       >
         <!-- Video iframe -->
         <iframe
           class="w-full h-full"
-          src="https://www.youtube.com/embed/Ofzory4hRsg?controls=1&rel=0&modestbranding=1"
+          src="https://youtu.be/tcTy54pZHEQ?si=XZ1LepsGFDN3WqjA?controls=1&rel=0&modestbranding=1"
           title="BINGGO! (Bisa dienggo) Level 4"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -32,13 +32,13 @@
 
       <!-- Tambahkan card lain -->
       <a
-        href="https://www.youtube.com/watch?v=Ofzory4hRsg"
+        href="https://youtu.be/tI45_FthHds?si=SLb8J7Vr0G9m1H8A"
         target="_blank"
         class="relative w-[320px] md:w-[360px] h-[200px] md:h-[220px] rounded-lg overflow-hidden shadow-lg group cursor-pointer border-2 border-transparent hover:border-green-800 hover:shadow-[0_0_15px_rgba(34,197,94,0.6)] bg-black flex items-center justify-center"
       >
         <iframe
           class="w-full h-full"
-          src="https://www.youtube.com/embed/Ofzory4hRsg?controls=1&rel=0&modestbranding=1"
+          src="https://youtu.be/tI45_FthHds?si=SLb8J7Vr0G9m1H8A?controls=1&rel=0&modestbranding=1"
           title="Podcast 2"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
