--- a/kepengurusan.html
+++ b/kepengurusan.html
@@ -209,13 +209,13 @@
                   </span>
                 </div>
               </div>
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div class="rounded-2xl w-full flex justify-center items-center">
                   <span class="text-3xl font-semibold text-indigo-600">
                     <img src="img/g3.jpg" alt="Profil2"
                       class="items-center object-cover w-full h-full transition-opacity duration-700 rounded-2xl shadow-md">
                   </span>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
